2001-01-15  Keiichi Suzuki  <keiichi@nanap.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Save excursion
	while `bbdb-annotate-message-sender' is being done.

2001-01-13  Kinji Itoh  <kinji-i@ma.neweb.ne.jp>

	* Makefile.in (install-package-lisp): Specify EMACS=$(XEMACS).

2001-01-11  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-copy-article-buffer): Remove smiley
	extents for XEmacs 21.1 using `format'.

	* lisp/dgnushack.el (dgnushack-texi-format): Cancel last change.

2001-01-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* lisp/gnus.el: Don't autoload "smiley" for `smiley-toggle-buffer';
	don't autoload "gnus-bitmap" or "x-face-mule" when Emacs 21 is
	running.

	* lisp/gnus-art.el (TopLevel): Autoload "gnus-bitmap" for
	`smiley-toggle-buffer' when compiling.
	(gnus-treatment-function-alist): Use `gnus-smiley-display' for
	`gnus-treat-display-smileys' by default when XEmacs or Emacs 21 is
	running.
	(gnus-treat-display-smileys): Check for `smiley-mule' instead of
	`gnus-bitmap'.
	(gnus-article-x-face-command): Don't check for xbm for x-face-e21.

2001-01-05  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* lisp/dgnushack.el (dgnushack-texi-format): Remove "@anchor" if it
	is not supported.

2000-12-26  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el: Bind `:parameter-type', `:parameter-document',
	`:function', `:function-document', `:variable',
	`:variable-document', `:variable-group', `:variable-type' and
	`:variable-default' for old Emacsen.

2000-12-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* configure: Regenerate.
	* configure.in: Add `AC_PATH_ETCDIR'.
	* Makefile.in (install-etc): New target.

	* lisp/nnheader.el (mm-image-load-path): Alias to
	`nnheader-image-load-path'.
	(nnheader-image-load-path): New function copied from